# data_wrangling_clinical_data

./: README.md  pyproject.toml
configs/: pipeline.yaml
configs/catalog/: variable_catalog.yaml
configs/datasets/: demographics.yaml  labs.yaml  outcomes.yaml  visits.yaml
configs/files/: demographics.yaml  labs.yaml  outcomes.yaml  visits.yaml
configs/mappings/: ctdb_single_workbook.yaml
configs/merges/: patient_pipeline_merges.yaml
configs/rules/: demographics_rules.yaml  labs_rules.yaml  outcomes_rules.yaml  visits_rules.yaml
data/analytic/: demographics_visits_20260315_154015.csv  patient_visits_labs_20260315_154015.csv  patient_visits_labs_outcomes_20260315_154015.csv
data/curated/: demographics_20260315_154015.csv  labs_20260315_153942.csv  visits_20260315_153942.csv
data/excluded/: demographics_visits_right_only_20260315_154015.csv  patient_visits_labs_left_only_20260315_154015.csv  patient_visits_labs_outcomes_right_only_20260315_154015.csv
data/input_catalog/: variables_merge_once_quince.xlsx
data/raw/: outcomes.csv
data/staging/: .gitkeep
docs/: reporte_scripts_repo.md
reports/demographics/: demographics_allowed_values_validation_summary.json  demographics_business_rules_summary.json  demographics_column_validation_summary.json  demographics_dtype_validation_summary.json  demographics_input_validation_summary.json  (+4 more)
tests/: test_cohort_harmonization.py  test_config_loader.py  test_content_and_transform.py  test_io_tables.py  test_merge.py  test_observability_manifest.py  test_orchestrator_single_workbook.py  test_validators.py
(+72 files in other folders)
